fix: make notification delivery reliable